change CatalogPersistenceUnit